test/eagerLogic2.slq

def main(){
	b:=1:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	sc:=1:!int[16];
	uc:=2:!uint[16];
	bc:=1:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;

	bandb:=b and b:𝔹;
	(b and b):=bandb;
	bands:=b and s:int[16]; /// error
	(b and s):=bands; /// error
	bandu:=b and u:uint[16]; /// error
	(b and u):=bandu; /// error
	bandsc:=b and sc:int[16]; /// error
	(b and sc):=bandsc; /// error
	banduc:=b and uc:uint[16]; /// error
	(b and uc):=banduc; /// error
	bandbc:=b and bc:𝔹;
	(b and bc):=bandbc;
	bandn:=b and n:𝔹; /// error
	(b and n):=bandn; /// error
	bandz:=b and z:𝔹; /// error
	(b and z):=bandz; /// error
	bandq:=b and q; /// error
	(b and q):=bandq; /// error
	bandr:=b and r; /// error
	(b and r):=bandr; /// error
	sandb:=s and b:int[16]; /// error
	(s and b):=sandb; /// error
	sands:=s and s:int[16]; /// error
	(s and s):=sands; /// error
	sandu:=s and u; /// error
	(s and u):=sandu; /// error
	sandsc:=s and sc:int[16]; /// error
	(s and sc):=sandsc; /// error
	sanduc:=s and uc; /// error
	(s and uc):=sanduc; /// error
	sandbc:=s and bc:int[16]; /// error
	(s and bc):=sandbc; /// error
	sandn:=s and n:int[16]; /// error
	(s and n):=sandn; /// error
	sandz:=s and z:int[16]; /// error
	(s and z):=sandz; /// error
	sandq:=s and q; /// error
	(s and q):=sandq; /// error
	sandr:=s and r; /// error
	(s and r):=sandr; /// error
	uandb:=u and b:uint[16]; /// error
	(u and b):=uandb; /// error
	uands:=u and s; /// error
	(u and s):=uands; /// error
	uandu:=u and u:uint[16]; /// error
	(u and u):=uandu; /// error
	uandsc:=u and sc; /// error
	(u and sc):=uandsc; /// error
	uanduc:=u and uc:uint[16]; /// error
	(u and uc):=uanduc; /// error
	uandbc:=u and bc:uint[16]; /// error
	(u and bc):=uandbc; /// error
	uandn:=u and n:uint[16]; /// error
	(u and n):=uandn; /// error
	uandz:=u and z:uint[16]; /// error
	(u and z):=uandz; /// error
	uandq:=u and q; /// error
	(u and q):=uandq; /// error
	uandr:=u and r; /// error
	(u and r):=uandr; /// error
	scandb:=sc and b:int[16]; /// error
	(sc and b):=scandb; /// error
	scands:=sc and s:int[16]; /// error
	(sc and s):=scands; /// error
	scandu:=sc and u; /// error
	(sc and u):=scandu; /// error
	scandsc:=sc and sc:!int[16]; /// error
	(sc and sc):=scandsc; /// error
	scanduc:=sc and uc; /// error
	(sc and uc):=scanduc; /// error
	scandbc:=sc and bc:!int[16]; /// error
	(sc and bc):=scandbc; /// error
	scandn:=sc and n:!int[16]; /// error
	(sc and n):=scandn; /// error
	scandz:=sc and z:!int[16]; /// error
	(sc and z):=scandz; /// error
	scandq:=sc and q; /// error
	(sc and q):=scandq; /// error
	scandr:=sc and r; /// error
	(sc and r):=scandr; /// error
	ucandb:=uc and b:uint[16]; /// error
	(uc and b):=ucandb; /// error
	ucands:=uc and s; /// error
	(uc and s):=ucands; /// error
	ucandu:=uc and u:uint[16]; /// error
	(uc and u):=ucandu; /// error
	ucandsc:=uc and sc; /// error
	(uc and sc):=ucandsc; /// error
	ucanduc:=uc and uc:!uint[16]; /// error
	(uc and uc):=ucanduc; /// error
	ucandbc:=uc and bc:!uint[16]; /// error
	(uc and bc):=ucandbc; /// error
	ucandn:=uc and n:!uint[16]; /// error
	(uc and n):=ucandn; /// error
	ucandz:=uc and z:!uint[16]; /// error
	(uc and z):=ucandz; /// error
	ucandq:=uc and q; /// error
	(uc and q):=ucandq; /// error
	ucandr:=uc and r; /// error
	(uc and r):=ucandr; /// error
	bcandb:=bc and b:𝔹;
	(bc and b):=bcandb;
	bcands:=bc and s:int[16]; /// error
	(bc and s):=bcands; /// error
	bcandu:=bc and u:uint[16]; /// error
	(bc and u):=bcandu; /// error
	bcandsc:=bc and sc:!int[16]; /// error
	(bc and sc):=bcandsc; /// error
	bcanduc:=bc and uc:!uint[16]; /// error
	(bc and uc):=bcanduc; /// error
	bcandbc:=bc and bc:!𝔹;
	(bc and bc):=bcandbc;
	bcandn:=bc and n:!𝔹; /// error
	(bc and n):=bcandn; /// error
	bcandz:=bc and z:!𝔹; /// error
	(bc and z):=bcandz; /// error
	bcandq:=bc and q; /// error
	(bc and q):=bcandq; /// error
	bcandr:=bc and r; /// error
	(bc and r):=bcandr; /// error
	nandb:=n and b:𝔹; /// error
	(n and b):=nandb; /// error
	nands:=n and s:int[16]; /// error
	(n and s):=nands; /// error
	nandu:=n and u:uint[16]; /// error
	(n and u):=nandu; /// error
	nandsc:=n and sc:!int[16]; /// error
	(n and sc):=nandsc; /// error
	nanduc:=n and uc:!uint[16]; /// error
	(n and uc):=nanduc; /// error
	nandbc:=n and bc:!𝔹; /// error
	(n and bc):=nandbc; /// error
	nandn:=n and n:!ℕ; /// error
	(n and n):=nandn; /// error
	nandz:=n and z:!ℕ; /// error
	(n and z):=nandz; /// error
	nandq:=n and q; /// error
	(n and q):=nandq; /// error
	nandr:=n and r; /// error
	(n and r):=nandr; /// error
	zandb:=z and b:𝔹; /// error
	(z and b):=zandb; /// error
	zands:=z and s:int[16]; /// error
	(z and s):=zands; /// error
	zandu:=z and u:uint[16]; /// error
	(z and u):=zandu; /// error
	zandsc:=z and sc:!int[16]; /// error
	(z and sc):=zandsc; /// error
	zanduc:=z and uc:!uint[16]; /// error
	(z and uc):=zanduc; /// error
	zandbc:=z and bc:!𝔹; /// error
	(z and bc):=zandbc; /// error
	zandn:=z and n:!ℕ; /// error
	(z and n):=zandn; /// error
	zandz:=z and z:!ℤ; /// error
	(z and z):=zandz; /// error
	zandq:=z and q; /// error
	(z and q):=zandq; /// error
	zandr:=z and r; /// error
	(z and r):=zandr; /// error
	qandb:=q and b; /// error
	(q and b):=qandb; /// error
	qands:=q and s; /// error
	(q and s):=qands; /// error
	qandu:=q and u; /// error
	(q and u):=qandu; /// error
	qandsc:=q and sc; /// error
	(q and sc):=qandsc; /// error
	qanduc:=q and uc; /// error
	(q and uc):=qanduc; /// error
	qandbc:=q and bc; /// error
	(q and bc):=qandbc; /// error
	qandn:=q and n; /// error
	(q and n):=qandn; /// error
	qandz:=q and z; /// error
	(q and z):=qandz; /// error
	qandq:=q and q; /// error
	(q and q):=qandq; /// error
	qandr:=q and r; /// error
	(q and r):=qandr; /// error
	randb:=r and b; /// error
	(r and b):=randb; /// error
	rands:=r and s; /// error
	(r and s):=rands; /// error
	randu:=r and u; /// error
	(r and u):=randu; /// error
	randsc:=r and sc; /// error
	(r and sc):=randsc; /// error
	randuc:=r and uc; /// error
	(r and uc):=randuc; /// error
	randbc:=r and bc; /// error
	(r and bc):=randbc; /// error
	randn:=r and n; /// error
	(r and n):=randn; /// error
	randz:=r and z; /// error
	(r and z):=randz; /// error
	randq:=r and q; /// error
	(r and q):=randq; /// error
	randr:=r and r; /// error
	(r and r):=randr; /// error
	borb:=b or b:𝔹;
	(b or b):=borb;
	bors:=b or s:int[16]; /// error
	(b or s):=bors; /// error
	boru:=b or u:uint[16]; /// error
	(b or u):=boru; /// error
	borsc:=b or sc:int[16]; /// error
	(b or sc):=borsc; /// error
	boruc:=b or uc:uint[16]; /// error
	(b or uc):=boruc; /// error
	borbc:=b or bc:𝔹;
	(b or bc):=borbc;
	born:=b or n; /// error
	(b or n):=born; /// error
	borz:=b or z; /// error
	(b or z):=borz; /// error
	borq:=b or q; /// error
	(b or q):=borq; /// error
	borr:=b or r; /// error
	(b or r):=borr; /// error
	sorb:=s or b:int[16]; /// error
	(s or b):=sorb; /// error
	sors:=s or s:int[16]; /// error
	(s or s):=sors; /// error
	soru:=s or u; /// error
	(s or u):=soru; /// error
	sorsc:=s or sc:int[16]; /// error
	(s or sc):=sorsc; /// error
	soruc:=s or uc; /// error
	(s or uc):=soruc; /// error
	sorbc:=s or bc:int[16]; /// error
	(s or bc):=sorbc; /// error
	sorn:=s or n:int[16]; /// error
	(s or n):=sorn; /// error
	sorz:=s or z:int[16]; /// error
	(s or z):=sorz; /// error
	sorq:=s or q; /// error
	(s or q):=sorq; /// error
	sorr:=s or r; /// error
	(s or r):=sorr; /// error
	uorb:=u or b:uint[16]; /// error
	(u or b):=uorb; /// error
	uors:=u or s; /// error
	(u or s):=uors; /// error
	uoru:=u or u:uint[16]; /// error
	(u or u):=uoru; /// error
	uorsc:=u or sc; /// error
	(u or sc):=uorsc; /// error
	uoruc:=u or uc:uint[16]; /// error
	(u or uc):=uoruc; /// error
	uorbc:=u or bc:uint[16]; /// error
	(u or bc):=uorbc; /// error
	uorn:=u or n:uint[16]; /// error
	(u or n):=uorn; /// error
	uorz:=u or z:uint[16]; /// error
	(u or z):=uorz; /// error
	uorq:=u or q; /// error
	(u or q):=uorq; /// error
	uorr:=u or r; /// error
	(u or r):=uorr; /// error
	scorb:=sc or b:int[16]; /// error
	(sc or b):=scorb; /// error
	scors:=sc or s:int[16]; /// error
	(sc or s):=scors; /// error
	scoru:=sc or u; /// error
	(sc or u):=scoru; /// error
	scorsc:=sc or sc:!int[16]; /// error
	(sc or sc):=scorsc; /// error
	scoruc:=sc or uc; /// error
	(sc or uc):=scoruc; /// error
	scorbc:=sc or bc:!int[16]; /// error
	(sc or bc):=scorbc; /// error
	scorn:=sc or n:!int[16]; /// error
	(sc or n):=scorn; /// error
	scorz:=sc or z:!int[16]; /// error
	(sc or z):=scorz; /// error
	scorq:=sc or q; /// error
	(sc or q):=scorq; /// error
	scorr:=sc or r; /// error
	(sc or r):=scorr; /// error
	ucorb:=uc or b:uint[16]; /// error
	(uc or b):=ucorb; /// error
	ucors:=uc or s; /// error
	(uc or s):=ucors; /// error
	ucoru:=uc or u:uint[16]; /// error
	(uc or u):=ucoru; /// error
	ucorsc:=uc or sc; /// error
	(uc or sc):=ucorsc; /// error
	ucoruc:=uc or uc:!uint[16]; /// error
	(uc or uc):=ucoruc; /// error
	ucorbc:=uc or bc:!uint[16]; /// error
	(uc or bc):=ucorbc; /// error
	ucorn:=uc or n:!uint[16]; /// error
	(uc or n):=ucorn; /// error
	ucorz:=uc or z:!uint[16]; /// error
	(uc or z):=ucorz; /// error
	ucorq:=uc or q; /// error
	(uc or q):=ucorq; /// error
	ucorr:=uc or r; /// error
	(uc or r):=ucorr; /// error
	bcorb:=bc or b:𝔹;
	(bc or b):=bcorb;
	bcors:=bc or s:int[16]; /// error
	(bc or s):=bcors; /// error
	bcoru:=bc or u:uint[16]; /// error
	(bc or u):=bcoru; /// error
	bcorsc:=bc or sc:!int[16]; /// error
	(bc or sc):=bcorsc; /// error
	bcoruc:=bc or uc:!uint[16]; /// error
	(bc or uc):=bcoruc; /// error
	bcorbc:=bc or bc:!𝔹;
	(bc or bc):=bcorbc;
	bcorn:=bc or n:!ℕ; /// error
	(bc or n):=bcorn; /// error
	bcorz:=bc or z:!ℤ; /// error
	(bc or z):=bcorz; /// error
	bcorq:=bc or q; /// error
	(bc or q):=bcorq; /// error
	bcorr:=bc or r; /// error
	(bc or r):=bcorr; /// error
	norb:=n or b; /// error
	(n or b):=norb; /// error
	nors:=n or s:int[16]; /// error
	(n or s):=nors; /// error
	noru:=n or u:uint[16]; /// error
	(n or u):=noru; /// error
	norsc:=n or sc:!int[16]; /// error
	(n or sc):=norsc; /// error
	noruc:=n or uc:!uint[16]; /// error
	(n or uc):=noruc; /// error
	norbc:=n or bc:!ℕ; /// error
	(n or bc):=norbc; /// error
	norn:=n or n:!ℕ; /// error
	(n or n):=norn; /// error
	norz:=n or z:!ℤ; /// error
	(n or z):=norz; /// error
	norq:=n or q; /// error
	(n or q):=norq; /// error
	norr:=n or r; /// error
	(n or r):=norr; /// error
	zorb:=z or b; /// error
	(z or b):=zorb; /// error
	zors:=z or s:int[16]; /// error
	(z or s):=zors; /// error
	zoru:=z or u:uint[16]; /// error
	(z or u):=zoru; /// error
	zorsc:=z or sc:!int[16]; /// error
	(z or sc):=zorsc; /// error
	zoruc:=z or uc:uint[16]; /// error
	(z or uc):=zoruc; /// error
	zorbc:=z or bc:!ℤ; /// error
	(z or bc):=zorbc; /// error
	zorn:=z or n:!ℤ; /// error
	(z or n):=zorn; /// error
	zorz:=z or z:!ℤ; /// error
	(z or z):=zorz; /// error
	zorq:=z or q; /// error
	(z or q):=zorq; /// error
	zorr:=z or r; /// error
	(z or r):=zorr; /// error
	qorb:=q or b; /// error
	(q or b):=qorb; /// error
	qors:=q or s; /// error
	(q or s):=qors; /// error
	qoru:=q or u; /// error
	(q or u):=qoru; /// error
	qorsc:=q or sc; /// error
	(q or sc):=qorsc; /// error
	qoruc:=q or uc; /// error
	(q or uc):=qoruc; /// error
	qorbc:=q or bc; /// error
	(q or bc):=qorbc; /// error
	qorn:=q or n; /// error
	(q or n):=qorn; /// error
	qorz:=q or z; /// error
	(q or z):=qorz; /// error
	qorq:=q or q; /// error
	(q or q):=qorq; /// error
	qorr:=q or r; /// error
	(q or r):=qorr; /// error
	rorb:=r or b; /// error
	(r or b):=rorb; /// error
	rors:=r or s; /// error
	(r or s):=rors; /// error
	roru:=r or u; /// error
	(r or u):=roru; /// error
	rorsc:=r or sc; /// error
	(r or sc):=rorsc; /// error
	roruc:=r or uc; /// error
	(r or uc):=roruc; /// error
	rorbc:=r or bc; /// error
	(r or bc):=rorbc; /// error
	rorn:=r or n; /// error
	(r or n):=rorn; /// error
	rorz:=r or z; /// error
	(r or z):=rorz; /// error
	rorq:=r or q; /// error
	(r or q):=rorq; /// error
	rorr:=r or r; /// error
	(r or r):=rorr; /// error
	bxorb:=b xor b:𝔹;
	(b xor b):=bxorb;
	bxors:=b xor s:int[16]; /// error
	(b xor s):=bxors; /// error
	bxoru:=b xor u:uint[16]; /// error
	(b xor u):=bxoru; /// error
	bxorsc:=b xor sc:int[16]; /// error
	(b xor sc):=bxorsc;  /// error
	bxoruc:=b xor uc:uint[16]; /// error
	(b xor uc):=bxoruc; /// error
	bxorbc:=b xor bc:𝔹;
	(b xor bc):=bxorbc;
	bxorn:=b xor n; /// error
	(b xor n):=bxorn; /// error
	bxorz:=b xor z; /// error
	(b xor z):=bxorz; /// error
	bxorq:=b xor q; /// error
	(b xor q):=bxorq; /// error
	bxorr:=b xor r; /// error
	(b xor r):=bxorr; /// error
	sxorb:=s xor b:int[16]; /// error
	(s xor b):=sxorb; /// error
	sxors:=s xor s:int[16]; /// error
	(s xor s):=sxors; /// error
	sxoru:=s xor u; /// error
	(s xor u):=sxoru; /// error
	sxorsc:=s xor sc:int[16]; /// error
	(s xor sc):=sxorsc; /// error
	sxoruc:=s xor uc; /// error
	(s xor uc):=sxoruc; /// error
	sxorbc:=s xor bc:int[16]; /// error
	(s xor bc):=sxorbc; /// error
	sxorn:=s xor n:int[16]; /// error
	(s xor n):=sxorn; /// error
	sxorz:=s xor z:int[16]; /// error
	(s xor z):=sxorz; /// error
	sxorq:=s xor q; /// error
	(s xor q):=sxorq; /// error
	sxorr:=s xor r; /// error
	(s xor r):=sxorr; /// error
	uxorb:=u xor b:uint[16]; /// error
	(u xor b):=uxorb; /// error
	uxors:=u xor s; /// error
	(u xor s):=uxors; /// error
	uxoru:=u xor u:uint[16]; /// error
	(u xor u):=uxoru; /// error
	uxorsc:=u xor sc; /// error
	(u xor sc):=uxorsc; /// error
	uxoruc:=u xor uc:uint[16]; /// error
	(u xor uc):=uxoruc; /// error
	uxorbc:=u xor bc:uint[16]; /// error
	(u xor bc):=uxorbc; /// error
	uxorn:=u xor n:uint[16]; /// error
	(u xor n):=uxorn; /// error
	uxorz:=u xor z:uint[16]; /// error
	(u xor z):=uxorz; /// error
	uxorq:=u xor q; /// error
	(u xor q):=uxorq; /// error
	uxorr:=u xor r; /// error
	(u xor r):=uxorr; /// error
	scxorb:=sc xor b:int[16]; /// error
	(sc xor b):=scxorb; /// error
	scxors:=sc xor s:int[16]; /// error
	(sc xor s):=scxors; /// error
	scxoru:=sc xor u; /// error
	(sc xor u):=scxoru; /// error
	scxorsc:=sc xor sc:!int[16]; /// error
	(sc xor sc):=scxorsc; /// error
	scxoruc:=sc xor uc; /// error
	(sc xor uc):=scxoruc; /// error
	scxorbc:=sc xor bc:!int[16]; /// error
	(sc xor bc):=scxorbc; /// error
	scxorn:=sc xor n:!int[16]; /// error
	(sc xor n):=scxorn; /// error
	scxorz:=sc xor z:!int[16]; /// error
	(sc xor z):=scxorz; /// error
	scxorq:=sc xor q; /// error
	(sc xor q):=scxorq; /// error
	scxorr:=sc xor r; /// error
	(sc xor r):=scxorr; /// error
	ucxorb:=uc xor b:uint[16]; /// error
	(uc xor b):=ucxorb; /// error
	ucxors:=uc xor s; /// error
	(uc xor s):=ucxors; /// error
	ucxoru:=uc xor u:uint[16]; /// error
	(uc xor u):=ucxoru; /// error
	ucxorsc:=uc xor sc; /// error
	(uc xor sc):=ucxorsc; /// error
	ucxoruc:=uc xor uc:!uint[16]; /// error
	(uc xor uc):=ucxoruc; /// error
	ucxorbc:=uc xor bc:!uint[16]; /// error
	(uc xor bc):=ucxorbc; /// error
	ucxorn:=uc xor n:!uint[16]; /// error
	(uc xor n):=ucxorn; /// error
	ucxorz:=uc xor z:!uint[16]; /// error
	(uc xor z):=ucxorz; /// error
	ucxorq:=uc xor q; /// error
	(uc xor q):=ucxorq; /// error
	ucxorr:=uc xor r; /// error
	(uc xor r):=ucxorr; /// error
	bcxorb:=bc xor b:𝔹;
	(bc xor b):=bcxorb;
	bcxors:=bc xor s:int[16]; /// error
	(bc xor s):=bcxors; /// error
	bcxoru:=bc xor u:uint[16]; /// error
	(bc xor u):=bcxoru; /// error
	bcxorsc:=bc xor sc:!int[16]; /// error
	(bc xor sc):=bcxorsc; /// error
	bcxoruc:=bc xor uc:!uint[16]; /// error
	(bc xor uc):=bcxoruc; /// error
	bcxorbc:=bc xor bc:!𝔹;
	(bc xor bc):=bcxorbc;
	bcxorn:=bc xor n:!ℕ; /// error
	(bc xor n):=bcxorn; /// error
	bcxorz:=bc xor z:!ℤ; /// error
	(bc xor z):=bcxorz; /// error
	bcxorq:=bc xor q; /// error
	(bc xor q):=bcxorq; /// error
	bcxorr:=bc xor r; /// error
	(bc xor r):=bcxorr; /// error
	nxorb:=n xor b; /// error
	(n xor b):=nxorb; /// error
	nxors:=n xor s:int[16]; /// error
	(n xor s):=nxors; /// error
	nxoru:=n xor u:uint[16]; /// error
	(n xor u):=nxoru; /// error
	nxorsc:=n xor sc:!int[16]; /// error
	(n xor sc):=nxorsc; /// error
	nxoruc:=n xor uc:!uint[16]; /// error
	(n xor uc):=nxoruc; /// error
	nxorbc:=n xor bc:!ℕ; /// error
	(n xor bc):=nxorbc; /// error
	nxorn:=n xor n:!ℕ; /// error
	(n xor n):=nxorn; /// error
	nxorz:=n xor z:!ℤ; /// error
	(n xor z):=nxorz; /// error
	nxorq:=n xor q; /// error
	(n xor q):=nxorq; /// error
	nxorr:=n xor r; /// error
	(n xor r):=nxorr; /// error
	zxorb:=z xor b; /// error
	(z xor b):=zxorb; /// error
	zxors:=z xor s:int[16]; /// error
	(z xor s):=zxors; /// error
	zxoru:=z xor u:uint[16]; /// error
	(z xor u):=zxoru; /// error
	zxorsc:=z xor sc:!int[16]; /// error
	(z xor sc):=zxorsc; /// error
	zxoruc:=z xor uc:!uint[16]; /// error
	(z xor uc):=zxoruc; /// error
	zxorbc:=z xor bc:!ℤ; /// error
	(z xor bc):=zxorbc; /// error
	zxorn:=z xor n:!ℤ; /// error
	(z xor n):=zxorn; /// error
	zxorz:=z xor z:!ℤ; /// error
	(z xor z):=zxorz; /// error
	zxorq:=z xor q; /// error
	(z xor q):=zxorq; /// error
	zxorr:=z xor r; /// error
	(z xor r):=zxorr; /// error
	qxorb:=q xor b; /// error
	(q xor b):=qxorb; /// error
	qxors:=q xor s; /// error
	(q xor s):=qxors; /// error
	qxoru:=q xor u; /// error
	(q xor u):=qxoru; /// error
	qxorsc:=q xor sc; /// error
	(q xor sc):=qxorsc; /// error
	qxoruc:=q xor uc; /// error
	(q xor uc):=qxoruc; /// error
	qxorbc:=q xor bc; /// error
	(q xor bc):=qxorbc; /// error
	qxorn:=q xor n; /// error
	(q xor n):=qxorn; /// error
	qxorz:=q xor z; /// error
	(q xor z):=qxorz; /// error
	qxorq:=q xor q; /// error
	(q xor q):=qxorq; /// error
	qxorr:=q xor r; /// error
	(q xor r):=qxorr; /// error
	rxorb:=r xor b; /// error
	(r xor b):=rxorb; /// error
	rxors:=r xor s; /// error
	(r xor s):=rxors; /// error
	rxoru:=r xor u; /// error
	(r xor u):=rxoru; /// error
	rxorsc:=r xor sc; /// error
	(r xor sc):=rxorsc; /// error
	rxoruc:=r xor uc; /// error
	(r xor uc):=rxoruc; /// error
	rxorbc:=r xor bc; /// error
	(r xor bc):=rxorbc; /// error
	rxorn:=r xor n; /// error
	(r xor n):=rxorn; /// error
	rxorz:=r xor z; /// error
	(r xor z):=rxorz; /// error
	rxorq:=r xor q; /// error
	(r xor q):=rxorq; /// error
	rxorr:=r xor r; /// error
	(r xor r):=rxorr; /// error
}
